# simulacrum-ai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARTICLE1_TECH_GUIDE.md  ARTICLE2_TECH_GUIDE.md  ARTICLE3_TECH_GUIDE.md  ARTICLE4_TECH_GUIDE.md
src/examples/: 01_synthetic_citizens_demo.py  02_distributed_protocols_demo.py  03_agent_economy.py  04_algorithmic_evolution_demo.py  05_governance_architecture_demo.py  06_complete_stack_demo.py  07_validation_evaluation_demo.py
src/examples/series_2_digital_twins/: 01_simple_library_usage.py  02_llm_powered_twin.py  03_team_simulation.py
src/simulacrum/: __init__.py  __version__.py
src/simulacrum/agents/: persona.py
src/simulacrum/core/: llm.py  memory.py
src/simulacrum/digital_twin/: __init__.py  calibration.py  ethics.py  factory.py  team.py  twin.py
src/simulacrum/economy/: __init__.py  marketplace.py  negotiation.py  wallet.py
src/simulacrum/evaluation/: __init__.py  validators.py
src/simulacrum/evolution/: __init__.py  learning.py  temporal.py
src/simulacrum/governance/: __init__.py  audit.py  explainability.py  guardrails.py
src/simulacrum/protocols/: __init__.py  base.py  consensus.py  jury.py  voting.py
src/simulacrum/utils/: __init__.py  config.py  exceptions.py
src/tests/: test_distributed_protocols.py  test_synthetic_citizens.py
